# AnkiPassFail

./: README.md  pyproject.toml  todo.md
.github/workflows/: release.yml
addon/: __init__.py  manifest.json  meta.json
addon/src/: addon.py  helpers.py
addon/src/assets/: main.css
anki-pass-fail/src/: __init__.py
ankipassfail/: __init__.py  meta.json
ankipassfail/src/web/: main.css
bundle/: anki-pass-fail.ankiaddon
scripts/: bundle.sh  link.sh  precommit.sh  unlink.sh
