[project]
name = "AnkiPassFail"
description = "Avoid Ease-Hell!"
version = "0.2.1"
authors = [{ name = "Shant Ergenian", email = "shaaant@pm.me" }]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 88
wrap-descriptions = 0
